src/main/webapp/css/encounterStyles.css
/* ... */
table#encounterHeader td#encounterHeaderRightColumn {
    color: white !important;
    vertical-align: top !important;
    text-align: right !important;
    padding-top: 3px !important;
    padding-right: 3px !important;
    width: 10.5%;
}

div#encounterTools {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 3px;
}

div#encounterTools fieldset:nth-of-type(1) {
    flex-grow: 1;
}

div#encounterTools fieldset:nth-of-type(2) {
    flex-grow: 2;
}

div#encounterTools fieldset:nth-of-type(3) {
    flex-grow: 3;
}

.doctorInfo {
    font-weight: bold;
    background-color: #A39FC4;
}

.encounterTable {
    background-color: #EBEAF2;
}

.patientInfo {
    font-weight: bold;
    background-color: #CBC9E0;
}


.ControlSelect {
    width: 100%;
}

.LeftTable {
    width: 100%;
}

.BodyStyle {
    margin-left: 0;
    margin-right: 0;
    margin-top: 0;
}

.MainTable {
    border-collapse: collapse;
    border-color: #111111;
    border-width: 0;
    padding-bottom: 0;
    padding-top: 0;
    padding-left: 0;
    padding-right: 0;
    width: 100%;
}

.MainTableTopRowLeftColumn {
    background-color: #003399;
    border-right: 2px solid #A9A9A9;
    border-left: 2px solid #A9A9A9;
    border-top: 2px solid #A9A9A9;
    height: 34px;
    max-width: 130px;
    font-weight: normal;
    color: #FFFFFF;
}

.MainTableBottomRowLeftColumn {
    border-right: 2px solid #A9A9A9;
    border-left: 2px solid #A9A9A9;
    border-bottom: 2px solid #A9A9A9;
    height: 4px;
    max-width: 130px;
}

.MainTableLeftColumn {
    border-right: 2px solid #A9A9A9;
    border-left: 2px solid #A9A9A9;
    max-width: 130px;
}

.MainTableTopRowRightColumn {
    border-right: 2px solid #A9A9A9;
    border-top: 2px solid #A9A9A9;
    background-color: #003399;
    height: 34px;
    min-width: 400px;
}

.MainTableBottomRowRightColumn {
    border-bottom: 2px solid #A9A9A9;
    border-right: 2px solid #A9A9A9;
    height: 4px;
}

.MainTableRightColumn {
    border-right: 2px solid #A9A9A9;
    height: 34px;
    margin-left: 4px;
}


/* For the Pharmacists Drug Therapy Problems */

.dtpStatus {
    margin-left: 10px;
}

/* FOR DEMOGRAPHIC EDIT DEMOGRAPHIC PAGE */
.demographicDetail {
    background-color: #CCCCFF;
}

div.info, span.info {
    font-weight: normal;
}

div.statusName, div.statusInfo, div.statusAppointment {
    float: left;
    padding-right: 20px;
}

div.statusAppointment {
    font-style: italic;
}

div.demographicSection {
    width: 100%;
    margin-top: 2px;
    border-top: 1px solid #ccccff;
    border-bottom: 1px solid #ccccff;
    border-left: 1px solid #ccccff;
    border-right: 1px solid #ccccff;
    float: left;
}

div.demographicSection h3 {
    background-color: #ccccff;
    font-weight: normal;
    margin-top: 0;
    padding-top: 0;
    margin-bottom: 0;
    padding-bottom: 0;
}

div.demographicSection ul {
    list-style: none;
    list-style-type: none;
    list-style-position: outside;
    padding-left: 1px;
    margin-left: 1px;
    margin-top: 0px;
    padding-top: 1px;
    margin-bottom: 0px;
    padding-bottom: 0px;
}

div.leftSection, div.rightSection {
    float: left;
    width: 48%;
    margin-left: 1%;
}


div.demographicSection li {
    padding-right: 15px;
    white-space: nowrap;
}

#viewDemographics2, div.demographicWrapper, .lightPurple {
    background-color: #eeeeff;
    width: 100%;
}

div.demographicDetail {
    width: 100%;
    background-color: #eeeeff;
}

#viewMobileMenu, .mobileScrollBtns, .mobileTitle, .mobileTopBar {
    display: none;
}

.darkPurple {
    background-color: #CCCCFF;
}

div.demographicWrapper {
    background-color: #eeeeff;
    margin-top: 5px;
    margin-left: 1px;
    margin-right: 1px;
}

/* popup menu styles for forms */
div.nav-menu-heading div.menu {
    position: absolute;
    left: 20px;
    top: auto;
    margin: 0;
    visibility: hidden;
    background-color: #6699cc;
    color: white;
    border: thin solid #4080BF;
    box-shadow: 1px 2px 4px 1px rgba(38, 40, 42, 0.3);
    border-radius: 4px 4px 0 0;
    z-index: 101;
    max-height: 150px;
    overflow-y: scroll;
    padding: 0 0 5px 0;
}

div.nav-menu-heading div.menu h3 {
    margin: 0;
    padding: 2px 0 !important;
    border-bottom: #4080BF thin solid;
    width: 100%;
    display: block;
    font-weight: 500 !important;
    position: sticky;
    top: 0;
    left: 0;
    right: 0;
    background-color: #4080BF;
    opacity: 100;
}

div.nav-menu-heading div.menu br {
    display: none;
}

div.nav-menu-heading div.menu a {
    display: block;
    padding: 1px 5px;
    text-decoration: none;
    color: white;
}


/*****************/

.TopStatusBarShort {
    font-weight: normal;
    background-color: #6699cc;
    color: black;
    height: 23px;
    width: 500px;
}

.Title {
    font-weight: bold;
    color: white;
    background-color: #6699cc;
}

.fieldBox {

    background-color: #ddddff;
}

.data {
    background-color: #F7F7F7;
}

.data2 {
    background-color: #F7F7F7;
    color: #3366CC;
}

.data3 {
    color: #15120B;
}

.data4 {
    background-color: #F7F7F7;
    color: #3366CC;
}

.data5 {
    background-color: #FDFEC7;
    color: #3366CC;
}

span.footnote {
    background-color: #ccccee;
    border: 1px solid #000;
    width: 4px;
}


div.leftBox {
    width: 100%;
    background-color: #FFFFFF;
}

div.leftBox h3 a {
    color: white;
    text-decoration: none;
    font-weight: normal;
}

div.leftBox h3 {
    background-color: transparent;
    color: white;
}

div.leftBox ul {
    display: flex;
    flex-direction: column;
    padding: 0;
    margin: 0;
    min-height: 18px;
    list-style: none;
    list-style-type: none;
    list-style-position: outside;
}

div.leftBox li {
    padding: unset !important;
    margin: unset !important;
    white-space: nowrap;
}

div.leftBox li:nth-of-type(odd) {
    background-color: white !important;
}

div.leftBox li:nth-of-type(even) {
    background-color: whitesmoke !important;
}
/* ... */

